script issues changes to minor

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Voice of Racism</title>
+        <title>JMT Against Hate</title>
         <link rel="stylesheet" href="20200805_024421Z/style.css">
         <link rel="icon" href="20200805_024421Z/images/favicon-32x32.png" type="image/png">
         <link rel="favicon" href="20200805_024421Z/images/favicon-32x32.png" type="image/png">
@@ -65,7 +65,7 @@
                     <li><a href="index.html#intro">Introduction</a></li>
                     <li><a href="index.html#subs">Examples of racism</a></li>
                     <li><a href="index.html#theme-data">Types of racism &amp; what you can do</a></li>
-                    <li><a href="index.html#about-anchor">About the voice of racism</a></li>
+                    <li><a href="index.html#about-anchor">About the JMT Against Hate & Racism</a></li>
                     <li><a href="index.html#help-anchor">Help &amp; support</a></li>
                     <li><a href="terms_privacy.html" target="_blank">Terms &amp; conditions</a></li>
                 </ul>
@@ -78,16 +78,16 @@
         <div id="title" class="title ready">
             <div>
                 <!-- <h2>Give nothing to racism</h2> -->
-                <h1>Voice of Racism</h1>
-                <p class="tag1">The everyday racism felt by real people</p>
-                <p class="tag2">in Aotearoa, New Zealand</p>
+                <h1>JMT Against Hate & Racism!</h1>
+                <p class="tag1">The everyday hate felt by real people</p>
+                <p class="tag2">in every city, Worldwide</p>
 
                 <div class="load-content">
                     <div class="loader">
                         <div class="loader-line">&nbsp;</div>
                         <p>Loading <span>0%</span></p>
                     </div>
-                    <p class="enter"><button id="title-start-button">enter experience</button></p>
+                    <p class="enter"><button id="title-start-button">BEGIN YOUR EXPERIENCE!</button></p>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
 
                 <p>Thank you to those who shared their <br>real experiences for this project</p>
 
-                <p><button id="skip-onboarding-2" class=visible>press &amp; hold to listen</button></p>
+                <p><button id="skip-onboarding-2" class=visible>PRESS & HOLD TO LISTEN</button></p>
 
             </div>
 
@@ -125,7 +125,7 @@
             <button id="nav-button" aria-label="Main menu">Menu</button>
             <div id="captions"></div>
             <button id="history-button">why is this racist?</button>
-            <a href="index.html" id="main-logo">Give Nothing to Racism</a>
+            <a href="index.html" id="main-logo">Give Nothing to Hate & Racism</a>
             <a href="https://www.hrc.co.nz/" target=_blank id="hrc-logo">Human Right Commission NZ</a>
             <span id="hold-prompt"><span>Press & hold</span></span>
 
